<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/rlWashingServicesMian"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cn_white"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/llBottom"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_alignParentBottom="true"
        android:background="@color/cn_oranger_color"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone">

        <com.kplus.car.widget.RegularTextView
            android:id="@+id/tvTotalServices"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@null"
            android:textColor="@color/cn_white"
            android:textSize="16sp"/>

        <Button
            android:id="@+id/btnNext"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="15dp"
            android:background="@drawable/btn_pay_selector"
            android:gravity="center"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            android:text="@string/cn_next"
            android:textColor="@color/cn_pay_color"
            android:textSize="20sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/llBottom"
        android:background="@color/cn_white"
        android:orientation="vertical">

        <View
            android:id="@+id/viewTop"
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/cn_line_color"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@color/cn_service_broadcast_bgcolor"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:visibility="gone">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="15dp"
                android:src="@drawable/cn_icon_service_broadcast"/>
            <com.kplus.car.widget.RegularTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="8dp"
                android:text="@string/cn_service_selectedMore_tips"
                android:textColor="@color/cn_oranger_color"
                android:textSize="14sp"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rlServiceList"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scrollbars="none"
                android:visibility="visible"/>

            <LinearLayout
                android:id="@+id/llWashingTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">
                <com.kplus.car.widget.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/cn_sevicers_tips1"
                    android:textColor="@color/cn_font_color"
                    android:textSize="16sp"/>

                <com.kplus.car.widget.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/cn_sevicers_tips2"
                    android:textColor="@color/cn_font_color"
                    android:textSize="16sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llWashingEmptyTips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:gravity="center"
                android:orientation="vertical"
                android:visibility="gone">
                <com.kplus.car.widget.RegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical"
                    android:text="@string/cn_sevicers_tips3"
                    android:textColor="@color/cn_font_color"
                    android:textSize="16sp"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>